# PyQChem

./: LICENSE  README.md  pyproject.toml
examples/: run_water_in_host.py
examples/output/: frame_00001.xyz
examples/structures/: ethane_cha.xyz  ethanol_mfi.xyz  methane_cha.xyz  methanol_mfi.xyz  propane_mfi.xyz
pyqchem/: __init__.py  cli.py  dft.py  dynamics.py  euler.py  internal_coords.py  lebedev.py  orchestrator.py  sampling.py  statmech.py  translation.py  variational_hamiltonian.py  xyz.py
pyqchem/structure/: __init__.py  atom.py  embedded_system.py  host_framework.py  molecule.py  silica.py
tests/: test_example_structures.py  test_internal_coords.py  test_pyqchem.py  test_rotation_sampling.py  test_sampling.py  test_translation_sampling.py  test_variational_hamiltonian.py
